--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "cross-os-proxy",
   "version": "1.0.0",
-  "description": "manage system proxy settings, support macOS & windows",
+  "description": "configure system proxy settings, support macOS & windows",
+  "homepage": "https://github.com/hx24/cross-os-proxy",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:hx24/cross-os-proxy.git"
+},
   "keywords": [
     "proxy",
     "macOS",
@@ -13,6 +16,8 @@
     "osx",
     "os x",
     "windows",
+    "sys proxy",
+    "system proxy",
     "network"
   ],
   "author": {
@@ -20,9 +25,14 @@
     "email": "83036406@qq.com"
   },
   "license": "ISC",
+  "files": [
+    "index.js",
+    "platforms"
+  ],
   "dependencies": {
     "execa": "5.1.1",
     "network": "0.5.0",
-    "pify": "5.0.0"
+    "pify": "5.0.0",
+    "regedit": "^4.0.0"
   }
 }
