--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cross-os-proxy",
-  "version": "2.1.0",
+  "version": "3.0.0",
   "description": "configure system proxy settings, support macOS & windows",
   "homepage": "https://github.com/hx24/cross-os-proxy",
   "main": "index.js",
@@ -27,9 +27,13 @@
   "license": "ISC",
   "files": [
     "index.js",
+    "cli.js",
     "platforms"
   ],
+  "bin": {
+    "osProxy": "./cli.js"
+  },
   "dependencies": {
-    "regedit": "5.1.1"
+    "regedit": "5.1.2"
   }
 }
